# vacancy-flask-db-project

./: .gitignore  README.md  engine_settings  pyproject.toml
dbmanager/: __init__.py  mongodb.py
handler/: __init__.py
logger/: __init__.py
manager/: mongodb.py
models/: __init__.py  base.py
repository/: __init__.py
settings/: basic.py
src/: main.py  parser.py  utils.py
src/templates/: add_vacancies.html  average_salary.html  companies.html  high_salary_vacancies.html  main.html  vacancies.html  vacancies_with_keyword.html
tests/: test_dbmanager.py  test_mongodb.py  test_repository.py  test_utils.py
