[tool.poetry]
name = "vacancy-flask-db-project"
version = "0.1.0"
description = ""
authors = ["Egor Nikitin <eganik5674@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.25"
environs = "^10.3.0"
requests = "^2.31.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^23.12.1"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
